LPT-2433:[BE] Create a new endpoint for purging expired unconfirmed reserved unconfirmed sessions
